# technical-content-writer

./: .gitignore  README.md  content.txt  gradio_app.py  pyproject.toml  start_app.sh
content_folder/: 1747328544.6444302_Quantom computing_content.md  1747330168.410132_Agentic AI vs Generative AI vs Agents_content.md
src/technical_content_writer/: main.py
src/technical_content_writer/crews/content_crew/: content_crew.py
src/technical_content_writer/crews/content_crew/config/: agents.yaml  tasks.yaml
src/technical_content_writer/tools/: search_tool.py
